# cmake-example-unity-cmock

./: .gitignore  CMakeLists.txt  README.md  clean.sh
cmake_common/: create_test.cmake
src/: CMakeLists.txt
src/adder/: CMakeLists.txt
src/adder/include/: add.h
src/adder/src/: add.c
src/adder/tests/: CMakeLists.txt  add_test.c  add_test_cmock.c  cmock_config.yml
src/calculator/: CMakeLists.txt
src/calculator/tests/: CMakeLists.txt  calculator_test.c
src/divider/: CMakeLists.txt
src/divider/tests/: CMakeLists.txt
src/multiplier/: CMakeLists.txt
src/substractor/: CMakeLists.txt
